# elfe3D_GPR

./: .gitignore  .readthedocs.yaml  Doxyfile  README.md  pyproject.toml  python_features_reference.md  requirements.txt
docs/: ToDos.md  requirements.txt
elfe3D_GPR/: Makefile  Makefile.old  README.md  elfe3d.f90  elfe3d_gpr  elfe3d_gpr.f90  mod_BC.f90  mod_calculate_global_source.f90  mod_calculate_local_left.f90  mod_calculate_matrices.f90  mod_calculate_tf.f90  mod_constant.f90  mod_define_model.f90  mod_error_estimates.f90  mod_interp_functions.f90  mod_model_parameters.f90  mod_read_mesh.f90  mod_solvers.f90  mod_sparse_matrix_operations.f90  mod_tetgen_operations.f90  mod_types_basic.f90  mod_util.f90  mod_vector_products.f90  zmumps_struc.h
elfe3d_gpr.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
examples/: 01_homogeneous_free-space.ipynb  01_wholespace_air.ipynb  02_homogeneous_earth.ipynb  03_two_layered_earth.ipynb  04_anomaly_box.ipynb  04_anomaly_sphere.ipynb  05_anomaly_multiple.ipynb  05_anomaly_sphere.ipynb  06_anomaly_sphere_in_two_layered_earth.ipynb  07_anomaly_sphere_signature.ipynb  07_anomaly_sphere_signature_semianalytical.ipynb  08_anomaly_multiple.ipynb
io/: __init__.py  elfe3DGPRTestDesign.py  elfe3DGPRTestDesignCO.py  elfe3DGPRTestDesignCO150.py  elfe3DGPRTestDesignCOAn.py  elfe3DGPRTestDesignCOS.py  elfe3DGPRTestWritingPMLOAn.py  elfe3DGPRTestWritingPMLOBit.py  legacy_complete_run.ipynb  plotting_evert_empymod.ipynb  plotting_june_w1.ipynb  plotting_june_w2.ipynb  plotting_june_w3_4_9.ipynb  plotting_june_w3_air.ipynb  pml_design.ipynb  (+10 more)
(+163 files in other folders)
