[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elfe3d-gpr"
version = "0.9.0"
description = "Python I/O layer for the elfe3D_GPR forward modelling solver"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = { "elfe3d_gpr" = "io" }
packages = ["elfe3d_gpr", "elfe3d_gpr.inputs", "elfe3d_gpr.outputs"]
