[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elfe3d-gpr-io"
version = "0.9.0"
description = "Python I/O wrapper for the elfe3D_GPR forward modelling solver"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
]

[tool.setuptools]
package-dir = { "elfe3d_gpr_io" = "io" }
packages = ["elfe3d_gpr_io", "elfe3d_gpr_io.inputs", "elfe3d_gpr_io.outputs"]
